# hyperdeck-qtopenapi

./: CMakeLists.txt  HyperDeckRESTControl.yaml  HyperDeckWSControl.yaml  Main.qml  README.md  clipmodel.cpp  clipmodel.h  hyperdeckapi.cpp  hyperdeckapi.h  main.cpp
